--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.orm.jdbc.bind=trace
+logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.stat=debug
